[package]
name = "rmf_reservation_ros2"
version = "0.3.1"
authors = ["Arjo Chakravaty <arjo@openrobotics.org>"]
edition = "2021"

[[bin]]
name = "reservation_node"
path = "src/reservation_node.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rmf_reservations = {git = "https://github.com/open-rmf/rmf_reservation", branch = "devel"}
# TODO(arjo): Remove chrono as un upstream dependency
chrono = "*"

[dependencies.rclrs]
version = "0.3"

[dependencies.rosidl_runtime_rs]
version = "0.3"

[dependencies.rmf_chope_msgs]
version = "*"
