<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_scheduler_ros2</name>
  <version>0.0.0</version>
  <description>Manages scheduled events for RMF</description>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmf_scheduler_msgs</depend>
  <depend>libsqlite3-0</depend>

  <build_depend>libsqlite3-dev</build_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>rmf_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
